feat: Add footer top section responsive

--- a/src/assets/css/fonts.css
+++ b/src/assets/css/fonts.css
@@ -39,7 +39,7 @@
 }
 
 @font-face {
-  font-family: "Satoshi-Regular";
+  font-family: "Satoshi";
   src: url("../fonts/satoshi/Satoshi-Regular.woff2") format("woff2"),
     url("../fonts/satoshi/Satoshi-Regular.woff") format("woff"),
     url("../fonts/satoshi/Satoshi-Regular.ttf") format("truetype");
